force-app/main/default/objects/RegraProduto__c/RegraProduto__c.object-meta.xml
<CustomObject>
    <label>Regra de Produto</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Regra de Produto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras de Produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>