force-app/main/default/objects/RegraProduto__c/fields/Acao__c.field-meta.xml
<CustomField>
    <fullName>Acao__c</fullName>
    <label>Ação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permitir</fullName>
            </value>
            <value>
                <fullName>Restringir</fullName>
            </value>
            <value>
                <fullName>RestringirNumeroAssentos</fullName>
                <label>Restringir Número de Assentos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>