force-app/main/default/objects/RegraProduto__c/fields/DisponivelPara__c.field-meta.xml
<CustomField>
    <fullName>DisponivelPara__c</fullName>
    <label>Disponível Para</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Parceiro</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>