force-app/main/default/objects/RegraProduto__c/fields/LocalDestino__c.field-meta.xml
<CustomField>
    <fullName>LocalDestino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Destino</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Regras de Produtos (Local Destino)</relationshipLabel>
    <relationshipName>RegrasProdutos</relationshipName>
    <type>Lookup</type>
</CustomField>