force-app/main/default/objects/RegraProduto__c/fields/NumeroAssentos__c.field-meta.xml
<CustomField>
    <fullName>NumeroAssentos__c</fullName>
    <description>Limita o Número de Assentos que serão disponibilizados para o Voo</description>
    <label>Número de Assentos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>