force-app/main/default/objects/RegraProduto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>LocalDestino__c</columns>
    <columns>LocalOrigem__c</columns>
    <columns>HorarioFinal__c</columns>
    <columns>HorarioInicial__c</columns>
    <columns>Acao__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>